add congrats and game over popup

--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+	<div class="blur"></div>
+
+    <!-- congrats popup -->
+    <section class="congrats-popup">
+        <h1 class="congrats-title">congratulations! you won!</h1>
+        <p class="score">
+            your score is: <span class="player-score">0</span>, with <span class="remaining-lives">0</span> hearts
+        </p>
+
+        <button class="play-again">play again?</button>
+    </section>
+
+    <!-- game over popup -->
+    <section class="game-over-popup">
+        <h1 class="game-over-title">game over! you lost!</h1>
+		<p class="advice">
+            be more patient next time ;)
+        </p>
+        <button class="play-again">play again?</button>
+    </section>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
